test/good/generics/num03.px

func print'<Num A>(A x) A def
    print x

print'(4)
print'(9.3)
