test/bad/generics/def10.px

func f<T>() def
    x: T

f()
